# DEvA

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  deva_version.cpp.in  deva_version.h
doc/: flowchart.dot
examples/: CMakeLists.txt
examples/EightQueen/: CMakeLists.txt  EASetup.json  EightQueen.cpp
examples/ThreeBinaryMatrices_Variation1/: CMakeLists.txt  ThreeBinaryMatrices_Variation1.cpp
include/: BasicTypes.h  Bibliography.h  Common.h  Concepts.h  EAStatistics.h  Error.h  EvolutionaryAlgorithm.h  EvolutionaryAlgorithm.hpp  Genealogy.h  Generation.h  Genotype.h  Individual.h  Logger.h  Operators.h  Parameter.h  Parameters.h  Phenotype.h  Population.h  RandomNumberGenerator.h  Reference.h  Specialisation.h  Strategy.h  VParameters.h  Variation.h  VariationFunctor.h
include/BuildingBlocks/: StandardConvergenceCheckers.h  StandardGenePoolSelectors.h  StandardInitialisers.h  StandardParentSelectors.h  StandardSurvivorSelectors.h  StandardTransforms.h  StandardVariations.h
include/DEvA/: Bibliography.h  Common.h  Concepts.h  DataStore.h  EAState.h  EAStatistics.h  Error.h  EvolutionaryAlgorithm.h  EvolutionaryAlgorithm.hpp  EvolutionaryAlgorithm_BuildingBlocks.hpp  EvolutionaryAlgorithm_ImportExport.h  Filestore.h  Functions.h  Individual.h  IndividualIdentifier.h  Logger.h  Metric.h  MetricFunctor.h  MetricFunctors.h  Parameter.h  Parameters.h  RandomNumberGenerator.h  Reference.h  Specialisation.h  VParameters.h  VariationFunctor.h  VariationFunctors.h
include/DEvA/BuildingBlocks/: StandardConvergenceCheckers.h  StandardGenePoolSelectors.h  StandardIndividualSorters.h  StandardInitialisers.h  StandardParentSelectors.h  StandardSurvivorSelectors.h  StandardTransforms.h  StandardVariations.h
include/DEvA/BuildingBlocks/Dependency/: Dependency.h
include/DEvA/BuildingBlocks/EAFunctions/: FunctionBlueprint.h  FunctionComposer.h  FunctionTemplates.h
include/DEvA/BuildingBlocks/EAFunctions/Compositions/: Compose.h
include/DEvA/JSON/: Common.h  Functions.h  GenerationState.h  Individual.h  IndividualIdentifier.h  Metric.h  MetricFunctors.h  VariationFunctors.h
include/DEvA/Project/: Datastore.h  Filestore.h  Project.h  ProjectCategory.h  ProjectSettings.h  Run.h
include/Strategies/: IdentityFunctions.h  StandardStrategies.h  StrategyFunctions.h
include/Variations/: CopyVariation.h  CrossoverVariation.h  SingleNucleotideVariation.h  StandardVariations.h  VariationBase.h
src/: Bibliography.cpp  EvolutionaryAlgorithm.cpp  Genealogy.cpp  Generation.cpp  Genotype.cpp  Individual.cpp  Logger.cpp  Phenotype.cpp  RandomNumberGenerator.cpp  Strategy.cpp  Variation.cpp
src/Variations/: CopyVariation.cpp  CrossoverVariation.cpp  SingleNucleotideVariation.cpp  VariationBase.cpp
tests/: CMakeLists.txt  DEvA_Concepts.cpp  DEvA_Parameters.cpp  DEvA_UserOperators.cpp  DEvA_Variation.cpp
